bigger cover onhover, open and close replies modal

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -10,10 +10,10 @@
 @using OmneFictio.Web.Models
 <!--model PostViewmodel-->
 
-<div class="modal-replies">
+<div class="modal-replies" id="modal-replies">
     <div class="mr-header">
         <span>Replies</span>
-        <div class="mr-close">
+        <div class="mr-close" id="mr-close">
             <i class="bi bi-x-lg"></i>
         </div>
     </div>
@@ -90,7 +90,8 @@
     <div class="post-card">
         <div class="p-body">
             <div class="p-cover">
-                <img src="/images/covers/71GFREhtqNL.jpg">
+                <img src="/images/covers/71GFREhtqNL.jpg" class="p-basecover">
+                <img src="/images/covers/71GFREhtqNL.jpg" class="p-megacover">
             </div>
             <div class="p-text">
                 <div class="p-title-cont">
@@ -191,9 +192,9 @@
                     <i class="bi bi-hand-thumbs-down c-dislikebtn dislikebtn"></i>
                     <a href="#" class="c-replybtn">Reply</a>
                 </div>
-                <a href="go get the replies mf" class="get_replies-cont">
+                <div class="get_replies">
                     <span>4 replies</span>
-                </a>
+                </div>
             </div>
         </div>
         <div class="reply">
