get post back end 1

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -8,7 +8,7 @@
     }
 }
 @using OmneFictio.Web.Models
-<!--model PostViewmodel-->
+@model GetpostViewmodel
 
 <div class="modal-replies" id="modal-replies">
     <div class="mr-header">
