--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
             </div>
         </div>
     </form>-->
-    <div class="drawer">
+    <div class="drawer" id="drawer">
         <div class="dw-top">
             <div class="dw-account">
                 <div class="dw-userimg">
