--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -247,13 +247,14 @@ main {
   height: 30px;
   font-family: "Josefin Sans", sans-serif;
 }
-.chapter_selection a {
+.chapter_selection a, .chapter_selection span {
   font-size: 1.2rem;
   transition: font-size 0.1s ease;
   color: var(--text-color1);
   text-decoration: underline;
+  cursor: pointer;
 }
-.chapter_selection a:hover {
+.chapter_selection a:hover, .chapter_selection span:hover {
   font-size: 1.4rem;
 }
 
@@ -531,10 +532,9 @@ img {
   max-width: 500px;
   max-height: 90%;
   background-color: var(--background-color2);
-  box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
+  box-shadow: 0px 0px 14px 4px var(--background-color-boxshadow1);
   border-radius: 20px 20px 10px 10px;
   font-family: "Itim", cursive;
-  overflow-y: auto;
   z-index: 200;
   padding-bottom: 6px;
 }
@@ -556,29 +556,34 @@ img {
   font-size: 1.8rem;
   text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
 }
-.modal-replies .mr-comment {
+.modal-replies .mr-body {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+.modal-replies .mr-body .mr-comment {
   display: flex;
   flex-direction: column;
   width: 100%;
   padding: 10px 6px 15px;
 }
-.modal-replies .mr-comment .mrc-header {
+.modal-replies .mr-body .mr-comment .mrc-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   font-family: "Itim", cursive;
 }
-.modal-replies .mr-comment .mrc-header .mrc-user {
+.modal-replies .mr-body .mr-comment .mrc-header .mrc-user {
   display: flex;
   align-items: center;
 }
-.modal-replies .mr-comment .mrc-header .mrc-user img {
+.modal-replies .mr-body .mr-comment .mrc-header .mrc-user img {
   height: 1.7rem;
   width: 1.7rem;
   border-radius: 50%;
   cursor: pointer;
 }
-.modal-replies .mr-comment .mrc-header .mrc-user .mrc-username {
+.modal-replies .mr-body .mr-comment .mrc-header .mrc-user .mrc-username {
   font-size: 0.9rem;
   cursor: pointer;
   padding: 0 8px;
@@ -587,44 +592,44 @@ img {
   overflow: hidden;
   max-width: 180px;
 }
-.modal-replies .mr-comment .mrc-header .mrc-menu {
+.modal-replies .mr-body .mr-comment .mrc-header .mrc-menu {
   display: flex;
   height: 100%;
   padding: 0 10px;
   font-size: 1.6rem;
   cursor: pointer;
 }
-.modal-replies .mr-comment .mrc-header .mrc-menu i {
+.modal-replies .mr-body .mr-comment .mrc-header .mrc-menu i {
   display: flex;
 }
-.modal-replies .mr-comment .mrc-text {
+.modal-replies .mr-body .mr-comment .mrc-text {
   margin: 10px 0;
   font-size: 0.8rem;
   font-family: "Gudea", sans-serif;
   line-height: 1rem;
 }
-.modal-replies .mr-comment .mrc-text span {
+.modal-replies .mr-body .mr-comment .mrc-text span {
   flex-grow: 1;
   display: -webkit-box;
   -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.modal-replies .mr-comment .mrc-footer .mrc-evaluation {
+.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation {
   display: flex;
   flex-direction: row;
   align-items: center;
   color: var(--text-color2);
 }
-.modal-replies .mr-comment .mrc-footer .mrc-evaluation i {
+.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation i {
   font-size: 1.2rem;
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.modal-replies .mr-comment .mrc-footer .mrc-evaluation .mrc-likes {
+.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-likes {
   padding: 0 8px;
 }
-.modal-replies .mr-comment .mrc-footer .mrc-evaluation .mrc-replybtn {
+.modal-replies .mr-body .mr-comment .mrc-footer .mrc-evaluation .mrc-replybtn {
   margin-left: 10px;
   font-family: "Josefin Sans", sans-serif;
   color: var(--text-color1);
@@ -709,6 +714,64 @@ img {
 }
 .modal-replies .mr-body .mr-reply .mrr-footer .mrr-user .mrr-menu i {
   display: flex;
+}
+
+.modal-chapters {
+  display: none;
+  flex-direction: column;
+  position: fixed;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -40%);
+  width: 92%;
+  max-width: 500px;
+  max-height: 90%;
+  background-color: var(--background-color2);
+  box-shadow: 0px 0px 14px 4px var(--background-color-boxshadow1);
+  border-radius: 20px 20px 10px 10px;
+  font-family: "Itim", cursive;
+  z-index: 200;
+  padding-bottom: 6px;
+}
+.modal-chapters .mc-header {
+  border-bottom: 2px solid var(--background-color-hover4);
+  display: flex;
+  flex-direction: row;
+}
+.modal-chapters .mc-header span {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  font-size: 1.3rem;
+  margin-right: auto;
+}
+.modal-chapters .mc-header .mc-close {
+  cursor: pointer;
+  padding: 4px 12px 0px;
+  font-size: 1.8rem;
+  text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+}
+.modal-chapters .mc-body {
+  overflow-y: auto;
+  padding: 6px 0 10px;
+}
+.modal-chapters .mc-body ul {
+  flex-grow: 1;
+}
+.modal-chapters .mc-body ul > li {
+  width: 100%;
+  overflow: hidden;
+  cursor: pointer;
+  border-bottom: 1px solid var(--background-color-hover2);
+}
+.modal-chapters .mc-body ul > li > a {
+  padding: 6px 20px;
+}
+.modal-chapters .mc-body ul > li:hover {
+  background-color: var(--background-color-hover1);
+}
+.modal-chapters .mc-body ul > li:last-child {
+  border-bottom: unset;
 }
 
 @media (min-width: 576px) {
