--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -765,7 +765,7 @@ header{
 }
 @media (max-width: 260px) {
     .filter-tagdd, .filter-addseries, .login-modal,
-    .orderby_type-cont, .filter-cont{
+    .orderby-cont, .filter-cont{
         width: 100% !important;
     }
 }
