--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -246,7 +246,7 @@
 
 <div class="comments">
     <div class="comment-cont">
-        <div class="comment">
+        <div class="comment" id="comment-1">
             <div class="c-header">
                 <div class="c-user">
                     <img src="/images/users/user_no_photo_300x300.png">
@@ -254,6 +254,10 @@
                 </div>
                 <div class="c-menu">
                     <i class="bi bi-three-dots"></i>
+                    <ul class="c-menupopup">
+                        <li>Report</li>
+                        <li>Block User</li>
+                    </ul>
                 </div>
             </div>
             <div class="c-text">
@@ -280,7 +284,7 @@
                     <i class="bi bi-hand-thumbs-up r-likebtn likebtn"></i>
                     <span class="r-likes">5465</span>
                     <i class="bi bi-hand-thumbs-down r-dislikebtn dislikebtn"></i>
-                    <a href="#" class="r-replybtn">Reply</a>
+                    <span class="r-gotoreply">GO</span>
                 </div>
                 <div class="r-user">
                     <span class="r-username">MrBombastic</span>
