--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -93,6 +93,7 @@ main {
 .post-2 .post-card .p-footer .p-footer-wrap {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   border-radius: 4px;
   width: 100%;
 }
@@ -400,10 +401,40 @@ img {
   height: 100%;
   padding: 0 10px;
   font-size: 1.6rem;
+  position: relative;
   cursor: pointer;
 }
 .comments .comment-cont .comment .c-header .c-menu i {
   display: flex;
+}
+.comments .comment-cont .comment .c-header .c-menu .c-menupopup {
+  position: absolute;
+  top: 30px;
+  right: 12px;
+  padding: 6px 4px;
+  border-radius: 6px;
+  font-size: 1rem;
+  background-color: var(--comment-menu-bgcolor);
+  box-shadow: 0 2px 10px 0px rgba(0, 0, 0, 0.25);
+}
+.comments .comment-cont .comment .c-header .c-menu .c-menupopup li {
+  padding: 3px 10px;
+  border-bottom: 1px solid var(--background-color-hover3);
+  white-space: nowrap;
+  transition: background-color 0.1s ease;
+}
+.comments .comment-cont .comment .c-header .c-menu .c-menupopup li:hover {
+  background-color: var(--background-color-hover2);
+}
+.comments .comment-cont .comment .c-header .c-menu .c-menupopup li:first-child {
+  border-radius: 6px 6px 0 0;
+}
+.comments .comment-cont .comment .c-header .c-menu .c-menupopup li:last-child {
+  border-radius: 0 0 6px 6px;
+  border-bottom: unset;
+}
+.comments .comment-cont .comment .c-header .c-menu .lightmode .c-menupopup {
+  box-shadow: 0 2px 10px 0px rgba(0, 0, 0, 0.1) !important;
 }
 .comments .comment-cont .comment .c-text {
   padding: 0px 10px;
@@ -492,12 +523,10 @@ img {
 .comments .comment-cont .reply .r-footer .r-evaluation .r-likes {
   padding: 0 6px;
 }
-.comments .comment-cont .reply .r-footer .r-evaluation .r-replybtn {
-  margin-left: 10px;
-  font-family: "Josefin Sans", sans-serif;
+.comments .comment-cont .reply .r-footer .r-evaluation .r-gotoreply {
+  margin-left: 14px;
+  font-family: "Gudea", sans-serif;
   color: var(--text-color1);
-  padding: 1px 0 0;
-  margin-bottom: -1px;
 }
 .comments .comment-cont .reply .r-footer .r-user {
   display: flex;
@@ -641,7 +670,7 @@ img {
   flex-direction: column;
   width: 100%;
   margin-bottom: 7px;
-  background-color: #424242;
+  background-color: var(--replies-bgcolor);
   padding: 6px 4px 3px;
 }
 .modal-replies .mr-body .mr-reply .mrr-text {
@@ -776,12 +805,9 @@ img {
 
 @media (min-width: 576px) {
   .post-2 .p-footer-wrap {
-    width: unset !important;
+    width: 70% !important;
     background: var(--background-color2);
     padding: 4px 30px;
-  }
-  .post-2 .p-footer-wrap .p-user {
-    margin-left: 40px !important;
   }
   .post-2 .p-footer-wrap .p-user .p-uimg-cont {
     padding: 0 7px;
