--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -91,6 +91,7 @@ main{
             .p-footer-wrap{
                 display: flex;
                 flex-wrap: wrap;
+                justify-content: space-between;
                 border-radius: 4px;
                 width: 100%;
                 .p-evaluation{
@@ -403,9 +404,39 @@ img{
                     height: 100%;
                     padding: 0 10px;
                     font-size: 1.6rem;
+                    position: relative;
                     cursor: pointer;
                     i{
                         display: flex;
+                    }
+                    .c-menupopup{
+                        position: absolute;
+                        top: 30px;
+                        right: 12px;
+                        padding: 6px 4px;
+                        border-radius: 6px;
+                        font-size: 1rem;
+                        background-color: var(--comment-menu-bgcolor);
+                        box-shadow: 0 2px 10px 0px rgb(0 0 0 / 25%);
+                        li{
+                            padding: 3px 10px;
+                            border-bottom: 1px solid var(--background-color-hover3);
+                            white-space: nowrap;
+                            transition: background-color 0.1s ease;
+                            &:hover{
+                                background-color: var(--background-color-hover2);
+                            }
+                            &:first-child{
+                                border-radius: 6px 6px 0 0;
+                            }
+                            &:last-child{
+                                border-radius: 0 0 6px 6px;
+                                border-bottom: unset;
+                            }
+                        }
+                    }
+                    .lightmode .c-menupopup{
+                        box-shadow: 0 2px 10px 0px rgb(0 0 0 / 10%) !important;
                     }
                 }
             }
@@ -494,12 +525,10 @@ img{
                     .r-likes{
                         padding: 0 6px;
                     }
-                    .r-replybtn{
-                        margin-left: 10px;
-                        font-family: 'Josefin Sans', sans-serif;
+                    .r-gotoreply{
+                        margin-left: 14px;
+                        font-family: 'Gudea', sans-serif;
                         color: var(--text-color1);
-                        padding: 1px 0 0;
-                        margin-bottom: -1px;
                     }
                 }
                 .r-user{
@@ -650,7 +679,7 @@ img{
             flex-direction: column;
             width: 100%;
             margin-bottom: 7px;
-            background-color: #424242;
+            background-color: var(--replies-bgcolor);
             padding: 6px 4px 3px;
             .mrr-text{
                 margin-bottom: 4px;
@@ -796,11 +825,10 @@ img{
 @media (min-width: 576px) {
     .post-2{
         .p-footer-wrap{
-            width: unset !important;
+            width: 70% !important;
             background: var(--background-color2);
             padding: 4px 30px;
             .p-user{
-                margin-left: 40px !important;
                 .p-uimg-cont{
                     padding: 0 7px;
                     background-color: var(--background-color2);
