--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -378,6 +378,7 @@ img{
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                position: relative;
                 padding: 0 6px;
                 font-family: "Itim", cursive;
                 .c-user{
@@ -404,40 +405,41 @@ img{
                     height: 100%;
                     padding: 0 10px;
                     font-size: 1.6rem;
-                    position: relative;
                     cursor: pointer;
                     i{
                         display: flex;
                     }
-                    .c-menupopup{
-                        position: absolute;
-                        top: 30px;
-                        right: 12px;
-                        padding: 6px 4px;
-                        border-radius: 6px;
-                        font-size: 1rem;
-                        background-color: var(--comment-menu-bgcolor);
-                        box-shadow: 0 2px 10px 0px rgb(0 0 0 / 25%);
-                        li{
-                            padding: 3px 10px;
-                            border-bottom: 1px solid var(--background-color-hover3);
-                            white-space: nowrap;
-                            transition: background-color 0.1s ease;
-                            &:hover{
-                                background-color: var(--background-color-hover2);
-                            }
-                            &:first-child{
-                                border-radius: 6px 6px 0 0;
-                            }
-                            &:last-child{
-                                border-radius: 0 0 6px 6px;
-                                border-bottom: unset;
-                            }
+                }
+                .c-menupopup{
+                    display: none;
+                    position: absolute;
+                    top: 30px;
+                    right: 12px;
+                    padding: 6px 4px;
+                    border-radius: 6px;
+                    font-size: 1rem;
+                    background-color: var(--comment-menu-bgcolor);
+                    box-shadow: 0 2px 10px 0px rgb(0 0 0 / 25%);
+                    li{
+                        padding: 3px 10px;
+                        border-bottom: 1px solid var(--background-color-hover3);
+                        white-space: nowrap;
+                        transition: background-color 0.1s ease;
+                        cursor: pointer;
+                        &:hover{
+                            background-color: var(--background-color-hover2);
+                        }
+                        &:first-child{
+                            border-radius: 6px 6px 0 0;
+                        }
+                        &:last-child{
+                            border-radius: 0 0 6px 6px;
+                            border-bottom: unset;
                         }
                     }
-                    .lightmode .c-menupopup{
-                        box-shadow: 0 2px 10px 0px rgb(0 0 0 / 10%) !important;
-                    }
+                }
+                .lightmode .c-menupopup{
+                    box-shadow: 0 2px 10px 0px rgb(0 0 0 / 10%) !important;
                 }
             }
             .c-text{
